tests/error/modifier_errors/dagger_loop3.err
Error: Invalid expression in dagger (at $FILE:6:8)
  | 
4 | @guppy(dagger=True)
5 | def test() -> None:
6 |     x = [i for i in range(46)]
  |         ^^^^^^^^^^^^^^^^^^^^^^ Loop found in a dagger context

Help: The function `test` is declared with the unitary flag: `dagger=True`. Thus
dagger constraints apply to its body.

Guppy compilation failed due to 1 previous error
